testsuite/poke.pkl/cast-str-diag-1.pk
/* { dg-do compile } */

var x = "foo" as uint<13>; /* { dg-error "invalid cast" } */
